--- a/app/src/main/res/layout/item_face_selection.xml
+++ b/app/src/main/res/layout/item_face_selection.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.ImageViewTip
@@ -13,6 +14,7 @@
     <TextView
         android:id="@+id/text_item_face_selection"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="小明" />
 
 </LinearLayout>
