--- a/app/src/main/res/layout/fragment_facelist.xml
+++ b/app/src/main/res/layout/fragment_facelist.xml
@@ -2,12 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_white">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:ct_title="@string/MESSAGES_IDENTIFY_ADD_BTN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,6 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
 
     <com.cylan.jiafeigou.widget.SlideBar
+        android:id="@+id/face_list_slider"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:textColor="@color/colorAccent"
