--- a/app/src/main/res/layout/fragment_youtube_detail.xml
+++ b/app/src/main/res/layout/fragment_youtube_detail.xml
@@ -40,7 +40,7 @@
         android:paddingEnd="@dimen/y15"
         android:paddingStart="@dimen/y15"
         android:singleLine="true"
-        android:text="我正在用UniCam720°全景相机进行全景"
+        android:text="我正在用UniCam720&#176;&#10;全景相机进行全景"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp17" />
 
@@ -53,7 +53,7 @@
         android:maxLines="2"
         android:paddingEnd="@dimen/y15"
         android:paddingStart="@dimen/y15"
-        android:text="我正在用UniCam720°全景相机进行全景直播我正在用全景相机进行全景直播我正在用全景相机进行全景直播我正在用"
+        android:text="我正在用UniCam720&#176;&#10;全景相机进行全景直播我正在用全景相机进行全景直播我正在用全景相机进行全景直播我正在用"
         android:textColor="@color/color_666666"
         android:textSize="@dimen/sp14" />
 
