--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -59,6 +59,16 @@
                     android:src="@drawable/wonderful_arrow_up" />
 
                 <TextView
+                    android:id="@+id/iv_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/x15"
+                    android:paddingRight="@dimen/x15"
+                    android:text="@string/BACK"
+                    android:textColor="@color/common_btn_color_state" />
+
+                <TextView
                     android:id="@+id/tv_cam_message_list_date"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
