--- a/app/src/main/res/layout/fragment_face_manager.xml
+++ b/app/src/main/res/layout/fragment_face_manager.xml
@@ -2,17 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_white">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
-        layout="@layout/layout_toolbar_camera_live"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:ct_background_color="@color/color_0ba8cf"
         app:ct_enable_theme="true"
         app:ct_fit_system_window="true"
-        app:ct_title="面孔管理">
+        app:ct_icon="@drawable/nav_tab_back_selector"
+        app:ct_right_title="@string/EDIT_THEME"
+        app:ct_title="@string/MESSAGES_FACE_MABAGE">
 
     </com.cylan.jiafeigou.widget.CustomToolbar>
 
