--- a/app/src/main/res/layout/fragment_facelist.xml
+++ b/app/src/main/res/layout/fragment_facelist.xml
@@ -10,6 +10,8 @@
         layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:ct_enable_theme="true"
+        app:ct_icon="@drawable/nav_tab_back_selector"
         app:ct_title="@string/MESSAGES_IDENTIFY_ADD_BTN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,23 +19,33 @@
 
     </com.cylan.jiafeigou.widget.CustomToolbar>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/face_list_items"
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">
 
-    <com.cylan.jiafeigou.widget.SlideBar
-        android:id="@+id/face_list_slider"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
-        app:slideBar_backgroundColor="@color/colorAccent"
-        app:slideBar_chooseBackgroundColor="@color/colorAccent" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/face_list_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="A"
+            android:textSize="33sp" />
+
+        <com.cylan.jiafeigou.widget.SlideBar
+            android:id="@+id/face_list_slider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end" />
+    </FrameLayout>
+
+
 </android.support.constraint.ConstraintLayout>
